--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main id="main">
 
     </main>
-    <script>
+    <script type="text/javascript">
       if(location.protocol !== 'https:' && !location.host.includes('localhost'))
         location.protocol = 'https:';
     </script>
