--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <link rel="shortcut icon" href="./assets/images/logo.png">
     <link rel="apple-touch-icon" href="./assets/images/logo.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../assets/images/logo.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../assets/images/logo.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/logo.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/images/logo.png">
 
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,300,200,500,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400' rel='stylesheet' type='text/css'>
