--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:title" content="Knovour's Resume" />
     <meta property="og:type" content="page" />
-    <meta property="og:url" content="https://notes.knovour.ninja/myresume" />
+    <meta property="og:url" content="https://resume.knovour.ninja" />
     <meta property="og:site_name" content="Knovour's Resume">
     <meta property="og:image" content="./assets/images/banner.png" />
     <meta property="og:description" content="Knovour 的簡歷，含專長、Blog 網址、Github 網址等等" />
