--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/logo.png">
     <link rel="apple-touch-icon" sizes="114x114" href="./assets/images/logo.png">
 
-    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,300,200,500,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,300,200' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/elemental/0.5.3/elemental.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.css">
